--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <title>Galleria</title>
 </head>
 
-<body>
-    <header>
-        <h1 class="display-3">Welcome To Gallery</h1>
-    </header>
-    <div class="container card-group"></div>
+<body class="d-flex flex-column">
+    <div class="bg-d">
+        <header>
+            <h1 class="display-3">Welcome To Gallery</h1>
+        </header>
+        <div class="container card-group d-flex justify-content-around"></div>
+    </div>
 
 
 
